# DarkDuty

./: CMakeLists.txt  README.md
src/: Campaign.h  Entity.h  Game.cpp  Game.h  Level.h  Network.h  Renderer.h  Types.h  Weapon.h  main.cpp
src/ai/: AICache.cpp  AICache.h  AIDialogue.cpp  AIDialogue.h  AIRequest.h  AsyncAIRequest.cpp  AsyncAIRequest.h  PollinationsClient.cpp  PollinationsClient.h
src/audio/: AudioManager.cpp  AudioManager.h  MusicPlayer.cpp  MusicPlayer.h  SoundEffect.h
src/core/engine/: Clock.cpp  Clock.h  Config.cpp  Config.h  Engine.cpp  Engine.h
src/core/input/: InputManager.cpp  InputManager.h  InputState.h
src/core/state/: GameState.h
src/gameplay/ai/: AIController.cpp  AIController.h  AIState.h  AlertBehavior.h  AttackBehavior.h  Pathfinding.h  PatrolBehavior.h
src/gameplay/campaign/: Campaign.cpp  Campaign.h  Mission.h  Mission1_Extraction.h  Mission2_Siege.h  Mission3_DarkDuty.h  MissionFactory.cpp  MissionFactory.h  Objective.h  ObjectiveTracker.cpp  ObjectiveTracker.h
src/gameplay/entities/: Bullet.h  Enemy.cpp  Enemy.h  Entity.h  Explosion.h  Player.cpp  Player.h
src/gameplay/physics/: AABB.h  Collision.cpp  Collision.h  Movement.cpp  Movement.h  RaycastSystem.cpp  RaycastSystem.h
src/gameplay/systems/: CombatSystem.cpp  CombatSystem.h  DamageSystem.h  MovementSystem.h  SpawnSystem.cpp  SpawnSystem.h  WaveSystem.cpp  WaveSystem.h
src/gameplay/weapons/: M4A1.h  MP5.h  Pistol.h  RPG.h  Shotgun.h  Sniper.h  Weapon.h  WeaponDef.h  WeaponID.h  WeaponRegistry.cpp  WeaponRegistry.h
src/gameplay/world/: ChunkMesh.h  Level.h  LevelFactory.cpp  LevelFactory.h  TileMap.h  TileType.h
src/graphics/3d/: Lighting.h  Material.h  Mesh.h  MeshBuilder.h
src/graphics/camera/: Camera.h  FPSCamera.h  Frustum.h
src/graphics/color/: Color.h
src/graphics/drawing/: DrawPrimitives.h  DrawSprites.h  DrawText.cpp  DrawText.h
src/graphics/hud/: AmmoDisplay.h  Crosshair.h  HUD.cpp  HUD.h  HealthBar.h  Minimap.h  ObjectiveDisplay.h  WeaponSlots.h
src/graphics/opengl/: Framebuffer.h  GLBuffer.h  GLContext.cpp  GLContext.h  GLHeaders.h  GpuInfo.cpp  GpuInfo.h  GpuPreference.h  Shader.h  ShaderProgram.h  Texture2D.h  VAO.h
src/graphics/renderer/: IRendererBackend.h  RenderTarget.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  RendererCapabilities.h  SoftwareRenderer.cpp  SoftwareRenderer.h
src/graphics/screens/: BriefingScreen.cpp  BriefingScreen.h  CampaignSelectScreen.cpp  CampaignSelectScreen.h  CreditsScreen.cpp  CreditsScreen.h  GameOverScreen.cpp  GameOverScreen.h  HomeScreen.cpp  HomeScreen.h  LoadingScreen.cpp  LoadingScreen.h  LobbyScreen.cpp  LobbyScreen.h  MultiplayerMenu.cpp  MultiplayerMenu.h  PauseScreen.cpp  PauseScreen.h  SettingsScreen.cpp  SettingsScreen.h  VictoryScreen.cpp  VictoryScreen.h
src/graphics/shaders/: DepthShader.h  HUDShader.h  PostProcessShader.h  SkyboxShader.h  WorldShader.h
src/math/: Mat4.h  MathUtils.h  Rect.h  Transform.h  Vec2.h  Vec3.h  Vec4.h
src/network/client/: LanClient.cpp  LanClient.h
src/network/protocol/: NetMessage.h  NetPacket.h  PacketSerializer.cpp  PacketSerializer.h
src/network/server/: ClientInfo.h  ClientManager.cpp  ClientManager.h  LanServer.cpp  LanServer.h
src/network/socket/: SocketDefs.h  SocketInit.cpp  SocketInit.h  UdpSocket.cpp  UdpSocket.h
